--- a/child_pages/about.html
+++ b/child_pages/about.html
@@ -21,5 +21,178 @@
     </nav>
 
     <div id="jumbotronjawn"></div>
+
+    <h1 class="about-itv">About Inform The Vote</h1>
+    <div class="about-content">
+        <div class="our-mission">
+            <h2 class="our-mission-heading">Our Mission</h2>
+            <div class="our-mission-content">
+                <div class="content-1">
+                    As a citizen who started with genuine curiosity about our upcoming election candidates,
+                I found myself increasingly concerned about the state of our local elections. The
+                concern eventually boils down to: Our citizens should be ‘fully informed’ rather than
+                ‘slightly informed’ regarding elections, especially when pro-actively seeking out the
+                information. (see Our Process) I believe that an informed, participatory citizenry is the
+                cornerstone of any functioning democracy. Given the resources and technology
+                available in 2023, there should already be a comprehensive system in place for
+                informing voters well ahead of election day. This system should deliver essential, easy-
+                to-digest information about candidates, issues, and voting procedures so that citizens
+                can make well-informed decisions. If we fail to meet these minimum standards, we risk
+                undermining the integrity of our elections.
+                </div>
+                <h3 class="about-subheading">The Ideal System Should:</h3>
+                <ol class="ideal-system">
+                    <li class="ideal-system-li">Provide Timely and Accessible Information:</li>
+                        <ul class="ideal-system-bullet-box">
+                            <li class="bullet">Information should be disseminated at least one month before any election and updated
+                                monthly during campaign seasons to ensure voters have ample time to make well-
+                                informed decisions.</li>
+                            <li class="bullet">For instance, a link to a comprehensive site that consolidates all relevant voting
+                                information should be provided with sample ballots that are mailed to voters.</li>
+                            <li class="bullet">Additionally, a link to the comprehensive site should be prominently displayed on a
+                                reasonable array of marketing mediums, including not only traditional platforms but also
+                                modern ones such as social media channels.</li>
+                        </ul>
+                    <li class="ideal-system-li">Public Appearances Calendar:</li>
+                        <ul class="ideal-system-bullet-box">
+                            <li class="bullet">A regularly updated calendar of all public appearances, forums, and debates where
+                                candidates will be present.</li>
+                            <li class="bullet">Candidates are required to make at least one public appearance per month.</li>
+                            <li class="bullet">These events should be primarily focused on enabling candidates to speak at length with
+                                curious citizens and provide them with meaningful information, as opposed to regular
+                                commissioner meetings or casual county events not primarily aimed at informing the
+                                electorate.</li>
+                        </ul>
+                    <li class="ideal-system-li">Meet a Minimum Standard for Candidate Information:</li>
+                        <ul class="ideal-system-bullet-box">
+                            <li class="bullet">A detailed agenda outlining their goals and visions.</li>
+                            <li class="bullet">Policy proposals directly associated with achieving these goals.</li>
+                            <li class="bullet">Positions on recent or ongoing popular issues relevant to the office they seek.</li>
+                            <li class="bullet">Influence and stances on popular issues they could impact, even indirectly.</li>
+                            <li class="bullet">A comparison between their policy positions and those of their opponents.</li>
+                            <li class="bullet">A summary of their experience, highlighting relevant roles and noting indirect
+                                experience where applicable.</li>
+                            <li class="bullet">Relevant biographical information.</li>
+                        </ul>
+                    <li class="ideal-system-li">Accountability Measures:</li>
+                        <div class="accountability">
+                            Should the above standards not be met, the integrity of the
+                            election could be called into question, leading to possible investigations, fines, or even
+                            the voiding of the election itself to preserve the democratic process.
+                        </div>
+                </ol>
+            </div>
+        </div>
+        <div class="our-process">
+            <h2 class="our-process-heading">Our Process: A Journey from Curiosity to Concern</h2>
+            <div class="our-process-content">
+                <h3 class="op-subheading">The Beginning: Phase 1</h3>
+                    <div class="op-section">
+                        When I received my sample primary ballot in the mail, I naturally assumed there would
+                        be a straightforward way to learn about the candidates. To my surprise, the ballot
+                        provided no direct link or website for candidate-related information. Rooted in the belief
+                        that in our modern, information-rich society, finding basic details about those running for
+                        public office should be a simple task, I initiated a general Google search. I fully
+                        expected a plethora of easily accessible information. That was not the case. Furthering
+                        my efforts, I directly reached out to the candidates but was met with just one insufficient
+                        response.
+                    </div>
+                <h3 class="op-subheading">The Beginning: Phase 2 - Frustration</h3>
+                    <div class="op-section">
+                        After the primary election, what began as reasonable curiosity morphed into reasonable
+                        concern. I expended almost a month trying to reach out to the candidates through all
+                        conceivable avenues: emails, social media, phone numbers, mailing addresses, and
+                        even the local newspaper. I still came up empty-handed. This underscored the fact that
+                        the existing system was woefully inadequate for a citizen genuinely interested in making
+                        an informed vote.
+                    </div>
+                <h3 class="op-subheading">Hope</h3>
+                    <div class="op-section">
+                        Thankfully, I thought of contacting the mayor, who was actually accessible,
+                        communicative, and helpful, as opposed to the candidates. He understood the need to
+                        reach out to the political parties and request more accessibility. This led to the
+                        republican party reaching out to me to suggest their website, which I already knew
+                        about and was insufficient. However, I remembered they had an upcoming bi-weekly
+                        breakfast and was able to confirm that those breakfasts are in fact open to the public
+                        (with RSVP and $15 cover).
+                        This breakfast was a good way to get myself more involved directly in the process.
+                        However, keep in mind that by this point, showing up at this breakfast was basically like
+                        starting at day 1 to inform my vote, even though I had already spent 6 weeks looking for
+                        information. Not only this, but as any newcomer to a group or organization, that
+                        breakfast was basically my chance to say hello and briefly talk about a few issues. This
+                        is not the robust, comprehensive source of information I need to make an informed vote,
+                        it’s just an introduction.
+                        Someone at the breakfast mentioned Deerfield Day, an event where the republicans
+                        and democrats would be available to talk at length…. But literally later that same
+                        afternoon. Thankfully, I had the afternoon off and was available. This event was
+                        probably the real beginning of me having at least some idea of what was going on and
+                        having enough time to speak at length with any of the 16 candidates running for
+
+                        office…. Nearly six weeks after starting the process. Even with that being
+                        acknowledged, about only a handful of the 16 candidates were present during the
+                        nearly 2 hours I was there.
+                        As I continued this process, it became clear that being available for such last-minute
+                        engagements and persistent searching for basic information isn&#39;t something the average
+                        citizen could easily do. The system should not require voters to go above and beyond to
+                        become informed.
+                    </div>
+                <h3 class="op-subheading">The Struggle Continued</h3>
+                    <div class="op-section">
+                        Over the next month, I decided to show up to public events in the hopes that literal
+                        attendance would increase my involvement, and then hopefully increase my election
+                        based knowledge. I attended commissioner meetings to gain an understanding of
+                        current county issues like The Middle Mile grant, water/sewage modernization, and the
+                        Nabb Ave extension. While these meetings were informative in general, they failed to
+                        help me understand where the various candidates stood on these issues, except for a
+                        few incumbents and candidates who happened to be present. I also attended local
+                        events like food festivals and winery promotions, as sometimes candidates will show up
+                        to engage with the community. These events were disappointments; they provided no
+                        insight into the elections as they are not set up for direct interaction with voters seeking
+                        information about candidates. Despite my best efforts, I realized I was only becoming
+                        &quot;slightly informed&quot; rather than &quot;fully informed,&quot; and this is where the system fails us. The
+                        standard should be for voters to be &quot;fully informed,&quot; and anything less undermines the
+                        democratic process. Without regularly scheduled, focused events and a centralized
+                        information hub, the cycle of gaps in knowledge and participation continues. It seems as
+                        though the county is content with going through the motions of having an election,
+                        making sure all the i’s are dotted and t’s crossed regarding the appearance of a quality
+                        election, without making sure the public is actually informed.
+                    </div>
+            </div>
+        </div>
+        <div class="our-suggestion">
+            <h2 class="our-suggestion-heading">Our Suggestion - The Legislative Solution: A Call to Action</h2>
+            <div class="our-suggestion-content">
+                <div class="os-section">
+                    Given the gaping holes in the current system, it&#39;s clear that piecemeal efforts to keep
+                    citizens informed are not sufficient. It&#39;s time for legislative action to standardize and
+                    enforce a more robust, transparent electoral process. We propose the drafting of a
+                    comprehensive bill that codifies the aforementioned standards into law.
+                </div>
+                <ol class="os-ol">
+                    <h4 class="os-subheading">Here's what the bill would aim to accomplish:</h4>
+                    <li class="os-li"><strong>Centralized Information Hub:</strong> A government-run or government-endorsed platform
+                        that provides comprehensive information on all candidates running in county elections.</li>
+                    <li class="os-li"><strong>Timely and Accessible Information:</strong> The bill would mandate that all relevant election
+                        information be made available at least one month prior to any election and that updates
+                        are provided on a regular, monthly basis during campaign seasons. This would include
+                        providing links to this information in all official election communications, such as sample
+                        ballots, as well as on various marketing mediums.</li>
+                    <li class="os-li"><strong>Mandatory Public Appearances:</strong> All candidates would be required to make at least
+                        one public appearance per month focused on in-depth interaction with citizens. These
+                        events should not be routine commissioner meetings or casual county events but
+                        should be aimed explicitly at informing voters.</li>
+                    <li class="os-li"><strong>Accountability Mechanisms:</strong> The bill would also introduce stringent oversight and
+                        accountability measures, including the possibility of fines or voiding an election, to
+                        ensure compliance with these new standards.</li>
+                </ol>
+                <div class="os-section">
+                    Instituting these requirements by law would eliminate the guesswork and frustration
+                    many voters face, raising the standard from &quot;slightly informed&quot; to &quot;fully informed.&quot; By
+                    setting this as the new baseline, we can fortify the integrity of our electoral process,
+                    ensuring that it truly reflects the will of an informed electorate.
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
