--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Calistoga&family=Roboto+Mono&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lora&family=REM:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,600;1,700&family=Roboto+Mono&display=swap" rel="stylesheet">
     <title>Inform The Vote</title>
 </head>
 <body>
@@ -26,6 +29,48 @@
         <div class="container-subh">
             <p>Clear, up to date information on candidates running for election relevant to Cumberland County NJ citizens and where they stand on the issues at hand.</a>
             <p>All information gathered by independent citizens of Cumberland County.</p>
+        </div>
+        <h4 class="ms-heading">Mission Statement</h4>
+        <div class="ms-content">
+            &quot;At Inform the Vote, our mission is to catalyze a new standard of civic engagement by
+            equipping you—the citizen—with thoroughly researched, unbiased, and easily digestible
+            information. We believe an empowered citizenry is the cornerstone of a transparent and
+            accountable local government. Yet, in an era where this should be the norm, both
+            transparency and accountability often fall short. We&#39;re here to challenge this status quo.
+            Our platform is designed to streamline and consolidate the essential information you
+            need to become an informed voter, breaking down the barriers that often deter civic
+            participation in a process that can and should be more straightforward.&quot;
+        </div>
+        <h4 class="ss-heading">Site Sections</h4>
+        <div class="ss-content">
+            <ol class="ss-ol">
+                <li class="ss-li"><strong>The Election:</strong> Navigate an interactive primary ballot that provides concise but
+                    comprehensive profiles for each candidate. We&#39;ve distilled complex qualifications and
+                    policy positions into an easily understandable format.</li>
+                <li class="ss-li"><strong>The Issues:</strong> Cut through the clutter by exploring major community issues presented in a
+                    straightforward manner, allowing you to quickly gauge where each candidate stands.</li>
+                <li class="ss-li"><strong>Get Involved:</strong> Don&#39;t just be a spectator—be an actor in the democratic process. Our
+                    consolidated calendar guides you to meaningful opportunities for community and
+                    political engagement.</li>
+                <li class="ss-li"><strong>Our Process:</strong> Understand the meticulous steps we&#39;ve taken to bring you this resource.
+                    Our journey to advocate for improved community engagement, transparency, and
+                    accountability has been long but is a shared responsibility—one that should be easier to
+                    undertake, but often isn&#39;t.</li>
+            </ol>
+            <div class="ss-closing-remarks">
+                <p>
+                    By transforming intricate political landscapes into accessible insights, we aim to turn
+                    passive citizens into proactive community members. Your vote counts, your voice
+                    matters, and together, we can redefine what it means to be engaged, transparent, and
+                    accountable in our local politics.
+                </p>
+                <p>
+                    This version attempts to combine the emphasis on individual responsibility with the work
+                    you&#39;ve put into making complex information accessible. It also nods to the systemic
+                    issues that make this work necessary in the first place. Feel free to tweak further as
+                    needed!
+                </p>
+            </div>
         </div>
     </div>
 </body>
