--- a/child_pages/cc-elections/Candidates/forkin.html
+++ b/child_pages/cc-elections/Candidates/forkin.html
@@ -87,24 +87,28 @@
 
         <img src="../../../assets/lighthouse.jpg" alt="cumberland county symbol" id="jumbotronjawn">
 
+
     <div class="container">
+
         <div class="main-content-box-with-shadow-gi"  style="background-color: #000080;">
             <button class="quick-summary-reopen">quick summary</button>
 
-            <div class="title-info">
-            <h2  style="background-color: #F8F8FF;">Thomas J. Forkin</h2>
-                <div class="running-for"  style="background-color: #F8F8FF;">
-                    <div class="running-title">Running for: </div>
-                    <div class="position">Commercial Township School Board</div>
-                </div>
-                <div class="incum-or-challenger"  style="background-color: #F8F8FF;">
-                    <div class="incumbent inactive">Incumbent</div>
-                    <div class="challenger inactive">Challenger</div> 
-                </div>
-            </div>
-            <div class="candidate-pic-box"  style="background-color: #F8F8FF;">
-                <img class="cover" src="../../../assets/candidates/forkin.jpg" class="candidate-pic">
-            </div>
+            <div class="get-involved-intro-content" style="background-color: #F8F8FF;">
+                <div class="title-info">
+                    <h2 >Thomas J. Forkin</h2>
+                        <div class="running-for">
+                            <div class="running-title">Running for: </div>
+                            <div class="position">Commercial Township School Board</div>
+                        </div>
+                        <div class="incum-or-challenger">
+                            <div class="incumbent inactive">Incumbent</div>
+                            <div class="challenger inactive">Challenger</div> 
+                        </div>
+                        <div class="candidate-pic-box">
+                            <img class="cover" src="../../../assets/candidates/forkin.jpg" class="candidate-pic">
+                        </div>
+                    </div>
+            </div>   
         </div>
 
         <div class="container">
