--- a/child_pages/cc-elections/Candidates/kuniansky.html
+++ b/child_pages/cc-elections/Candidates/kuniansky.html
@@ -78,37 +78,63 @@
             </div>
         </dialog>
 
-        <img src="../../../assets/lighthouse.jpg" alt="cumberland county symbol" id="jumbotronjawn">
+        <!-- <img src="../../../assets/lighthouse.jpg" alt="cumberland county symbol" id="jumbotronjawn"> -->
 
 <div class="container">
 
-    <button class="quick-summary-reopen">quick summary</button>
-
     <div class="title-info">
-       <h2>Joanne Kuniansky</h2>
-        <div class="running-for">
-            <div class="running-title">Running for: </div>
-            <div class="position">U.S. Senate</div>
-        </div>
-        <div class="incum-or-challenger">
-            <div class="incumbent inactive">Incumbent</div>
-            <div class="challenger inactive">Challenger</div> 
-        </div>
-    </div>
-    <div class="candidate-pic-box">
-        <img class="cover" src="../../../assets/candidates/kuniansky.jpg" class="candidate-pic">
-    </div>
-    <div class="candidate-agenda">
-        <h4 class="sub-heading">Website</h4>
-        <div class="website">
-            <a href="https://hudsoncountyview.com/2-swp-candidates-file-as-independents-for-cd-8-u-s-senate-general-elections/" target="_blank" rel="noopener noreferrer" class="website-link">Hudson County View Article</a>
-            <a href="https://www.insidernj.com/kuniansky-running-for-united-states-senate/" target="_blank" rel="noopener noreferrer" class="website-link">Insider NJ Article</a>
-            <a href="https://socialistworker.org/" target="_blank" rel="noopener noreferrer" class="website-link">Party Publication</a>
-            <a href="https://themilitant.com/" target="_blank" rel="noopener noreferrer" class="website-link">Related Publication</a>
-        </div>
+        <h2>Joanne Kuniansky</h2>
+         <div class="running-for">
+             <div class="running-title">Running for: </div>
+             <div class="position">US Senate</div>
+         </div>
+         <div class="incum-or-challenger">
+             <div class="incumbent inactive">Incumbent</div>
+             <div class="challenger inactive">Challenger</div> 
+         </div>
+     </div>
 
-        <br>
-        <br>
+     <div class="candidate-pic-box">
+         <img class="cover" src="../../../assets/candidates/Ken_Kaplan.jpg" class="candidate-pic">
+         <div class="candidate-pic-box-content">
+             <h4 class="sub-heading">Websites</h4>
+             <div class="website">     
+                <a href="https://hudsoncountyview.com/2-swp-candidates-file-as-independents-for-cd-8-u-s-senate-general-elections/" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Hudson County View Article</button></a>            
+                <a href="https://www.insidernj.com/kuniansky-running-for-united-states-senate/" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Insider NJ Article</button></a>            
+                 <!-- <a href="https://www.facebook.com/BashawforSenate" target="_blank" style="color: blue;"><i class="fa-brands fa-facebook"></i></a> -->
+                 <!-- <a href="https://www.instagram.com/curtisbashawforsenate/" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Instagram</button></a> -->
+                 <!-- <a href="https://www.instagram.com/curtisbashawforsenate/" target="_blank" style="background: linear-gradient(45deg, #f09433, #e6683c, #dc2743, #cc2366, #bc1888); -webkit-background-clip: text; background-clip: text; -webkit-text-fill-color: transparent;"><i class="fa-brands fa-instagram"></i></a> -->
+                 <a href="https://socialistworker.org/" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Party Publication</button></a>            
+
+                 <a href="https://themilitant.com/" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Related Publication</button></a>
+                 <!-- <a href="https://twitter.com/Bashawforsenate" target="_blank"><i class="fa-brands fa-x-twitter"></i></a> -->
+                 <!-- <a href="https://twitter.com/Bashawforsenate" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Twitter/X</button></a>             -->
+                 <!-- <a href="https://www.youtube.com/channel/UCy4ncytNFIhuuu0Bfk1m1Kw" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">YouTube</button></a>             -->
+
+                </div>
+             <button class="quick-summary-reopen">quick candidate summary</button>
+
+             <div class="election-date">
+                 <p>This election is on November 5th, 2024</p>
+             </div>
+
+             <div class="animal-box">
+                 <img src="../../../assets/candidates/swpLogo.jpg" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/swpLogo.jpg" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/swpLogo.jpg" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/swpLogo.jpg" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/swpLogo.jpg" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/swpLogo.jpg" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/swpLogo.jpg" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/swpLogo.jpg" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/swpLogo.jpg" alt="democrt donkey mascot" class="donkey">
+             </div>
+         </div>
+     </div>
+
+    
+    <div class="candidate-agenda">
+        
 
         <h4 class="sub-heading">individual agenda</h4>
             <div class="agenda-thesis">
