--- a/child_pages/cc-elections/Candidates/walz.html
+++ b/child_pages/cc-elections/Candidates/walz.html
@@ -78,7 +78,7 @@
                 Minnesota, promoted funding for public schools and making college more affordable, and generally tried to reduce carbon emissions and promoted renewable energy. He seems
                 to have a moderate stance on gun control, being a gun owner himself while pushing common sense gun law legislation. While he does have a lot of experience and has made many 
                 accomplishments, it is still unclear what the specific Harris-Walz agenda will be, since as of today 8/9/2024 no agenda is posted on their campaign site. One might be able 
-                to speculate based on the <a href="https://democrats.org/where-we-stand/party-platform/">Democrat Party Platform</a>, but we here at InformTheVote don't want to speculate 
+                to speculate based on the <a href="https://democrats.org/where-we-stand/party-platform/">*2020* Democrat Party Platform</a>, but we here at InformTheVote don't want to speculate 
                 too much. Hopefully as the campaign season evolves his platform will become clearer.
                 Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
               </p>
@@ -91,37 +91,64 @@
 
 <div class="container">
 
+    <div class="title-info">
+        <h2>Tim Walz</h2>
+         <div class="running-for">
+             <div class="running-title">Running for: </div>
+             <div class="position">US Senate</div>
+         </div>
+         <div class="incum-or-challenger">
+             <div class="incumbent inactive">Incumbent</div>
+             <div class="challenger inactive">Challenger</div> 
+         </div>
+     </div>
+
+     <div class="candidate-pic-box">
+         <img class="cover" src="../../../assets/candidates/walz.jfif" class="candidate-pic">
+         <div class="candidate-pic-box-content">
+             <h4 class="sub-heading">Websites</h4>
+             <div class="website">     
+                <a href="https://kamalaharris.com/meet-governor-tim-walz/" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Campaign Site</button></a>            
+                <a href="https://www.facebook.com/GovTimWalz/" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Facebook</button></a>            
+                 <a href="https://www.instagram.com/mngovernor/?hl=en" target="_blank" style="color: blue;"><i class="fa-brands fa-facebook"></i></a>
+                 <a href="https://x.com/govtimwalz" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Instagram</button></a>
+                 <!-- <a href="https://x.com/govtimwalz" target="_blank" style="background: linear-gradient(45deg, #f09433, #e6683c, #dc2743, #cc2366, #bc1888); -webkit-background-clip: text; background-clip: text; -webkit-text-fill-color: transparent;"><i class="fa-brands fa-instagram"></i></a> -->
+                 <a href="https://www.youtube.com/channel/UC7CPBsekv_4u34kIVqaVtDA" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">YouTube</button></a>            
+
+                 <a href="https://x.com/govtimwalz" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Twitter/X</button></a>
+                 <!-- <a href="https://twitter.com/Bashawforsenate" target="_blank"><i class="fa-brands fa-x-twitter"></i></a> -->
+                 <!-- <a href="https://twitter.com/Bashawforsenate" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Twitter/X</button></a>             -->
+                 <!-- <a href="https://www.youtube.com/channel/UCy4ncytNFIhuuu0Bfk1m1Kw" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">YouTube</button></a>             -->
+
+                </div>
+             <button class="quick-summary-reopen">quick candidate summary</button>
+
+             <div class="election-date">
+                 <p>This election is on November 5th, 2024</p>
+             </div>
+
+             <div class="animal-box">
+                 <img src="../../../assets/candidates/libertarianLogo.png" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/libertarianLogo.png" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/libertarianLogo.png" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/libertarianLogo.png" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/libertarianLogo.png" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/libertarianLogo.png" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/libertarianLogo.png" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/libertarianLogo.png" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/libertarianLogo.png" alt="democrt donkey mascot" class="donkey">
+             </div>
+         </div>
+     </div>
+
     <button class="quick-summary-reopen">quick summary</button>
 
-    <div class="title-info">
-       <h2>Tim Walz</h2>
-        <div class="running-for">
-            <div class="running-title">Running for: </div>
-            <div class="position">Vice President</div>
-        </div>
-        <div class="incum-or-challenger">
-            <div class="incumbent inactive">Incumbent</div>
-            <div class="challenger active">Challenger</div> 
-        </div>
-    </div>
-    <div class="candidate-pic-box">
-        <img class="cover" src="../../../assets/candidates/walz.jfif" class="candidate-pic">
-    </div>
+    
     <div class="candidate-agenda">
-        <h4 class="sub-heading">Website</h4>
-        <div class="website">
-            <a href="https://kamalaharris.com/meet-governor-tim-walz/" target="_blank" rel="noopener noreferrer" class="website-link">Campaign Site</a>
-            <a href="https://www.facebook.com/GovTimWalz/" target="_blank" rel="noopener noreferrer" class="website-link">Facebook</a>
-            <a href="https://www.instagram.com/mngovernor/?hl=en" target="_blank" rel="noopener noreferrer" class="website-link">Instagram</a>
-            <a href="https://x.com/govtimwalz" target="_blank" rel="noopener noreferrer" class="website-link">Twitter/X</a>
-            <a href="https://www.youtube.com/channel/UC7CPBsekv_4u34kIVqaVtDA" target="_blank" rel="noopener noreferrer" class="website-link">YouTube</a>
-        </div>
-
-        <br>
-        <br>
+        
 
         <h4 class="sub-heading">individual agenda</h4>
-            <div class="agenda-thesis">
+            <div class="agenda-thesis can-sec">
                 <br>
                 <ul>
                     <li>It is currently unclear what the specific Harris-Walz agenda is, since as of today 8/9/2024 one is not posted on their campaign site. You might be able to 
@@ -135,7 +162,7 @@
             <br>
 
             <h4 class="sub-heading">experience</h4>
-            <div class="experience">
+            <div class="experience can-sec">
                 <ul>
                     <li>Army National Guard for 24 years.</li>
                     <li>High School teacher and football coach.</li>
@@ -149,7 +176,7 @@
             <br>
 
             <h4 class="sub-heading">Partial Voting record</h4>
-            <div class="experience">
+            <div class="experience can-sec">
                 <ul>
                     <li>Supported the Affordable Care Act in 2010 and voted against multiple repeals.</li>
                     <li>Supported numerous bills to improve veterans' healthcare, benefits, and services.​​</li>
